--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,9 +1,10 @@
 #
-#Thu Jul 19 12:35:50 CEST 2018
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v1.41\\bin
-configurations-xml=9d31ecd045b5342aac079ce0f77189c2
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=3c333ba33c51ccc254bb69f65f4fff20
-default.languagetoolchain.version=1.41
+#Sat Jan 18 18:05:28 CET 2020
+default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC12-16F1xxx_DFP\\1.1.53
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v2.10\\bin
+configurations-xml=4d855a3ca663faaffdb2eefddb213f92
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
+default.languagetoolchain.version=2.10
 host.platform=windows
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=82aae3dc951968745b1174478554f96e
+default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
