Add readme. Upgrade project to MPLABX V5.40 and XC8 V2.20.

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Sat Jan 18 18:05:28 CET 2020
-default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC12-16F1xxx_DFP\\1.1.53
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc8\\v2.10\\bin
-configurations-xml=4d855a3ca663faaffdb2eefddb213f92
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-default.languagetoolchain.version=2.10
-host.platform=windows
+#Fri Jun 12 22:02:06 CEST 2020
+default.Pack.dfplocation=/opt/microchip/mplabx/v5.40/packs/Microchip/PIC12-16F1xxx_DFP/1.1.53
+default.languagetoolchain.dir=/opt/microchip/xc8/v2.20/bin
+configurations-xml=7ee867475d3a544e75085f1a169e1d08
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=9db8f8a224aa17d0023ea7f468f871dc
+default.languagetoolchain.version=2.20
+host.platform=linux
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=f87389d82b4b299d292110931953ebdc
+default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d294c249eba4bad913d547c4bcb54386
