Rename project. Upgrade project to MPLABX v6.45 and XC8 v3.00.

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,10 +1,13 @@
 #
-#Sat Mar 11 14:10:40 CET 2023
-default.Pack.dfplocation=/opt/microchip/mplabx/v5.40/packs/Microchip/PIC12-16F1xxx_DFP/1.1.53
-default.languagetoolchain.dir=/opt/microchip/xc8/v2.20/bin
-configurations-xml=efaf74952da0a4fa476d7064fa314d61
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=9db8f8a224aa17d0023ea7f468f871dc
-default.languagetoolchain.version=2.20
-host.platform=linux
+#Fri Aug 15 08:00:59 CEST 2025
+default.languagetoolchain.version=3.00
+default.Pack.dfplocation=/opt/microchip/mplabx/v6.25/packs/Microchip/PIC12-16F1xxx_DFP/1.7.242
 conf.ids=default
-default.com-microchip-mplab-nbide-toolchainXC8-XC8LanguageToolchain.md5=d294c249eba4bad913d547c4bcb54386
+default.languagetoolchain.dir=/opt/microchip/xc8/v3.00/bin
+host.id=1cnu-kwjg-ix
+default.platformTool.md5=null
+configurations-xml=4cab031e413598f63a92ffd936da31e8
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
+default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=9a6aba94656eb8afd334984366ea5e35
+proj.dir=/home/ludo/git/sprd
+host.platform=linux
