Improve project renaming.

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Fri Aug 15 08:00:59 CEST 2025
+#Fri Aug 15 08:19:36 CEST 2025
 default.languagetoolchain.version=3.00
 default.Pack.dfplocation=/opt/microchip/mplabx/v6.25/packs/Microchip/PIC12-16F1xxx_DFP/1.7.242
 conf.ids=default
@@ -9,5 +9,5 @@ default.platformTool.md5=null
 configurations-xml=4cab031e413598f63a92ffd936da31e8
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6cd85c1014597ae4d039afea70fe46c5
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=9a6aba94656eb8afd334984366ea5e35
-proj.dir=/home/ludo/git/sprd
+proj.dir=/home/ludo/git/meteofox-sprd
 host.platform=linux
